baseline mushroompickerG working